# league-discord-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_bot.sh
data/: items.json
docs/: security-audit-2026-07-13.md
src/leaguebot/: bot.py  db.py  items.py  riot_api.py
src/leaguebot/cogs/alerts/: alerts.py  cog.py  poll.py
src/leaguebot/cogs/leaderboard/: board.py  cog.py  sync.py
src/leaguebot/cogs/memestats/: cog.py  stats.py
src/leaguebot/cogs/randomchamp/: fetch_ddragon.py
src/leaguebot/cogs/recap/: cog.py
tests/: test_db.py  test_riot_api.py
