[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leaguebot"
version = "0.1.0"
description = "Discord bot for League of Legends match recaps, leaderboards, and stats"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "aiohttp",
    "python-dotenv",
    "aiosqlite",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]